[package]
# The app is "Ring"; the package carries a -bcc suffix so it can never be
# confused with the `ring` crypto crate already in the dependency graph.
name = "ring-bcc"
version = "0.4.1"
edition = "2021"
license = "MPL-2.0"
publish = false

# The shipped executable is still `ring`.
[[bin]]
name = "ring"
path = "src/main.rs"

[workspace]

# The emulator and transport crates come from their own repos (extracted
# from tango); Cargo.lock pins the exact revs.
[dependencies]
mgba = { git = "https://github.com/tangobattle/mgba-rs" }
tango-rtc = { git = "https://github.com/tangobattle/tango-rtc" }
tango-signaling = { git = "https://github.com/tangobattle/tango-signaling" }
sdl3 = { version = "0.18", default-features = false, features = ["build-from-source-static"] }
# Same UI stack as tango. `image-without-codecs` gives the image widget
# without pulling decoders — the screen is raw RGBA from the emulator.
iced = { version = "0.14", features = ["tokio", "image-without-codecs", "advanced"] }
futures = "0.3"
rfd = "0.14"
anyhow = "1"
bytemuck = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util = "0.7"
directories-next = "2"
env_logger = "0.9"
# png only: decodes the embedded window icon (assets/icon.png). The selftest
# example also uses it for screenshot dumps.
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
# Windows-only: compiles resource.rc (exe/taskbar icon + VERSIONINFO) into
# the exe. No-op on other targets via the cfg check in build.rs.
embed-resource = "1"

[dev-dependencies]
rand = "0.8"

[lints.clippy]
new_without_default = "allow"
type_complexity = "allow"
